# Thalora

./: .env.example  .gitignore  PLAYWRIGHT_IMPLEMENTATION.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: e2e-tests.yml
backend/: .env  .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: database.rs  main.rs
backend/src/auth/: auth.rs  middleware.rs  mod.rs  models.rs
backend/tests/: configuration_tests.rs  integration_tests.rs  redirect_tests.rs
database/: init.sql
database/migrations/: 000_create_schema_migrations.sql  001_add_domains_table.sql  002_create_urls_table.sql  003_create_users_table.sql
scripts/: reset-db.sh  run-migrations.sh  setup-dev-db.sh  validate-playwright-config.js
thalora-frontend/: Dockerfile.test  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
thalora-frontend/public/: index.html
thalora-frontend/src/: App.js  App.tsx
thalora-frontend/src/components/: DomainManager.css  DomainManager.tsx  Footer.css  Footer.js  Footer.tsx  Header.css  Header.js  Header.tsx  Login.css  Login.tsx  Register.css  Register.tsx  ThemeToggle.css  ThemeToggle.tsx  URLDisplay.css  URLDisplay.js  URLDisplay.tsx  URLForm.css  URLForm.js  URLForm.tsx
thalora-frontend/src/contexts/: ThemeContext.tsx
thalora-frontend/src/pages/: AuthPage.css  AuthPage.tsx  Home.css  Home.js  Home.tsx
thalora-frontend/src/services/: api.ts  auth.ts
thalora-frontend/src/styles/: globals.css
thalora-frontend/src/utils/: AuthContext.tsx  validateURL.js  (+1 more)
(+15 files in other folders)
